--- a/_posts/2018-07-06-dog-beds.md
+++ b/_posts/2018-07-06-dog-beds.md
@@ -9,5 +9,5 @@ image: "/images/dogbeds/dogs.png"
 I designed a cheap and easy to build dog bed for each of my dogs. See how to build it here:
 
 <div class="videoWrapper">
-    <iframe width="560" height="349" src="<iframe width="560" height="315" src="https://www.youtube.com/embed/OB8PKdPe0Sk?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    <iframe width="560" height="349" src="<iframe width="560" height="315" src="https://www.youtube.com/embed/OB8PKdPe0Sk?rel=0&amp;showinfo=0&autoplay=1&mute=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 </div>
