--- a/_posts/2018-07-06-dog-beds.md
+++ b/_posts/2018-07-06-dog-beds.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Upholstered Dog Beds"
-excerpt: "Upholstered dog beds for each of my dogs."
+excerpt: "Custom beds for each of my dogs."
 tags: [funiture, custom]
 image: "/images/dogbeds/dogs.png"
 ---
