--- a/_posts/2017-6-01-diablo.md
+++ b/_posts/2017-6-01-diablo.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "#TeamDiablo"
-excerpt: "Diablo themed plaques for my agile team at work."
+excerpt: "Diablo themed signs for my team at work"
 tags: [random]
 image: "/images/teamdiablo/all.jpg"
 ---
