--- a/_posts/2018-07-06-dog-beds.md
+++ b/_posts/2018-07-06-dog-beds.md
@@ -1,13 +1,24 @@
 ---
 layout: post
 title: "Upholstered Dog Beds"
-excerpt: "Custom beds for each of my dogs."
+excerpt: "Custom beds for each of my dogs"
 tags: [funiture, custom]
 image: "/images/dogbeds/dogs.png"
 ---
 
-I designed a cheap and easy to build dog bed for each of my dogs. See how to build it here:
+Cheap and easy to build dog beds. They have a modern/contemporary look. Can be built to match any existing furniture textures and colors.
 
+### Parts List
+* Scrap hardwood for legs
+* Few sheets of chip board (sold as shelves)
+* Some thin batting
+* Fabric/Linen Curtains
+* Black Paint
+* Iron Angles
+
+To make the process easier I upholstered each piece first, then used the iron angle to attach them all together. Use clamps to keep everything at 90 degrees. To stiffen the frame I attached a solid sheet of 1/4 MDF to the base. This will prevent the mattress from sagging and add most of the structural support.
+
+### Build Video
 <div class="videoWrapper">
     <iframe width="560" height="349" src="<iframe width="560" height="315" src="https://www.youtube.com/embed/OB8PKdPe0Sk?rel=0&amp;showinfo=0&autoplay=1&mute=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 </div>
