--- a/_posts/2017-6-01-diablo.md
+++ b/_posts/2017-6-01-diablo.md
@@ -17,17 +17,17 @@ I have uploaded the parts to [Thingiverse](https://www.thingiverse.com/thing:299
 
 <div class="box alt">
 	<div class="row 50% uniform">
-		<div class="6u"><span class="image fit"><img src="{{ "/images/teamdiablo/final.jpg" | absolute_url }}" alt="" /></span></div>
-		<div class="6u"><span class="image fit"><img src="{{ "/images/teamdiablo/background.jpg" | absolute_url }}" alt="" /></span></div>
+		<div class="6u"><span class="image fit"><img id="img1" onclick="imageModel(this.id);" src="{{ "/images/teamdiablo/final.jpg" | absolute_url }}" alt=""/></span></div>
+		<div class="6u"><span class="image fit"><img id="img2" onclick="imageModel(this.id);" src="{{ "/images/teamdiablo/background.jpg" | absolute_url }}" alt="" /></span></div>
 	</div>
 	
 	<div class="row 50% uniform">
-		<div class="6u"><span class="image fit"><img src="{{ "/images/teamdiablo/shinyjpg.jpg" | absolute_url }}" alt="" /></span></div>
-		<div class="6u"><span class="image fit"><img src="{{ "/images/teamdiablo/bunch.jpg" | absolute_url }}" alt="" /></span></div>
+		<div class="6u"><span class="image fit"><img id="img3" onclick="imageModel(this.id);" src="{{ "/images/teamdiablo/shinyjpg.jpg" | absolute_url }}" alt="" /></span></div>
+		<div class="6u"><span class="image fit"><img id="img4" onclick="imageModel(this.id);" src="{{ "/images/teamdiablo/bunch.jpg" | absolute_url }}" alt="" /></span></div>
 	</div>
 	
 	<div class="row 50% uniform">
-		<div class="6u"><span class="image fit"><img src="{{ "/images/teamdiablo/letters.jpg" | absolute_url }}" alt="" /></span></div>
-		<div class="6u"><span class="image fit"><img src="{{ "/images/teamdiablo/readytoassemble.jpg" | absolute_url }}" alt="" /></span></div>
+		<div class="6u"><span class="image fit"><img id="img5" onclick="imageModel(this.id);" src="{{ "/images/teamdiablo/letters.jpg" | absolute_url }}" alt="" /></span></div>
+		<div class="6u"><span class="image fit"><img id="img6" onclick="imageModel(this.id);" src="{{ "/images/teamdiablo/readytoassemble.jpg" | absolute_url }}" alt="" /></span></div>
 	</div>
 </div>
